log
Thu 11 May 2023 01:46:30 AM UTC: 
 tests:  0|4
total_score: 0/70
0db74e2
Thu 11 May 2023 01:51:23 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|4
total_score: 0/70
2b1f3ef
Thu 11 May 2023 01:51:45 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
4c9d690
Thu 11 May 2023 01:53:54 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   37 |     new->size = NULL;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
38c1054
Thu 11 May 2023 01:54:03 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
3d7da55
Thu 11 May 2023 01:55:25 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
85ad8c5
Thu 11 May 2023 01:55:42 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
34d3cf2
Thu 11 May 2023 01:56:40 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ddc91d1
Thu 11 May 2023 01:56:47 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2c8c80b
Thu 11 May 2023 01:57:39 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
983d8f4
Thu 11 May 2023 01:58:54 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[pq->size];
      |            ~~~~~~~~~~~~~^~~~~~~~~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8539ff0
Thu 11 May 2023 02:00:30 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0589661
Thu 11 May 2023 02:00:40 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ebc5428
Thu 11 May 2023 02:00:53 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
434d8d2
Thu 11 May 2023 02:01:20 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:13: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   22 |     if (pq->capacity == 0) return NULL;
      |             ^~~~~~~~
      |             capac
Compilation failed
1e8bf9a
Thu 11 May 2023 02:01:28 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
0c2b7ba
Thu 11 May 2023 02:01:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
165bae0
Thu 11 May 2023 02:06:09 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:26: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   32 |         pq->capac = (pq->capacity * 2) + 1;
      |                          ^~~~~~~~
      |                          capac
Compilation failed
f70a2dd
